third_party/move/move-compiler-v2/tests/copy-propagation/mut_refs_3.exp
============ bytecode before first stackless bytecode pipeline ================

[variant baseline]
fun m::test($t0: u64): u64 {
     var $t1: u64
     var $t2: &mut u64
     var $t3: &mut u64
     var $t4: &mut u64
     var $t5: u64
  0: $t2 := borrow_local($t0)
  1: $t3 := infer($t2)
  2: $t4 := infer($t3)
  3: $t5 := 0
  4: write_ref($t2, $t5)
  5: $t1 := read_ref($t4)
  6: return $t1
}


Diagnostics:
error: cannot write local `a` since it is borrowed
  ┌─ tests/copy-propagation/mut_refs_3.move:7:9
  │
5 │         let b = a;
  │                 - previously mutably borrowed here
6 │         let c = b;
7 │         *a = 0;
  │         ^^^^^^ write attempted here
8 │         *c
  │         -- conflicting reference `c` used here
